data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_806.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\95\80\80\80\00\01\03\65\6e"
    "\76\0d\69\6d\70\6f\72\74\65\64\5f\66\75\6e\63\00"
    "\00\03\82\80\80\80\00\01\01\0a\8f\80\80\80\00\01"
    "\89\80\80\80\00\01\01\7f\20\00\10\00\01\0b"
  )
""
)